# N-Body-Simulator

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Gravitation  Makefile  README.md  cmake_install.cmake  main.cpp
assets/: blur.fs
